2000-02-28  Dominik Vogt  <dominik.vogt@gmx.de>

	* ChangeLog:
	removed trash entries

	* configure.in:
	fixed version number broken by release building script tests

2000-02-25  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure.in: changed version to 2.3.16

	* fvwm/style.c (simplify_style_list):
	(add_style_to_list):
	(ProcessDestroyStyle):
	* fvwm/screen.h:
	* fvwm/events.c (HandleEvents):
	* fvwm/screen.h (ScreenInfo):
	speed up style merging by waiting until fvwm has nothing else to do
	before simplifying the style list

	* fvwm/conditional.c (MatchesConditionMask):
	* fvwm/style.c (blockcmpmask):
	renamed cmp_maked_flags to blockcmpmask

	* fvwm/fvwm2.1:
	added missing description of gotodeskandpage command
	removed references to obsolete Desk command; use GotoDesk instead

	* fvwm/virtual.c (GetDeskNumber):
	(gotoDeskAndPage_func):
	(changeDesks):
	gotodesk, gotodeskandpage and movetodesk accept 'prev' to indicate last
	desk.

2000-02-24  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/style.c (simplify_style_list):
	fixed style merging

2000-02-23  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure.in: changed version to 2.3.15

	* fvwm/style.c (add_style_to_list):
	(simplify_style_list):
	(remove_all_of_style_from_list):
	style list is now a double linked list
	more aggressive style merging logic

	* fvwm/style.h (SGET_PREV_STYLE):
	(SSET_PREV_STYLE):
	new access macros

	* fvwm/fvwm.h (window_style):
	new member 'prev'

	* fvwm/style.c (simplify_style_list):
	renamed from merge_style_list()

2000-02-22  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/fvwm2.1: Added Michael Han's description of pan frames to the
	man page.

2000-02-21  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/functions.c (CheckActionType):
	fixed MoveThreshold command: move was triggered one pixel too early

2000-02-20  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/ConfigFvwmSetup: use new styles Font, IconFont and Hilight...

2000-02-19  Chris Rankin  <rankinc@zipworld.com.au>
