@@ -1,3 +1,10 @@
+2000-02-29  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/icons.c (CreateIconWindow):
+	(RedoIconName):
+	(Iconify):
+	fixed NoIconTItle core dump
+
 2000-02-28  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* ChangeLog:
